syntax = "proto3";

package proto;

option go_package = "/proto";

message Role {
    uint32 id = 1;
    string name = 2;
}

message Group {
    uint32 id = 1;
    string name = 2;
    repeated Group children = 3;
    repeated Role roles = 4;
}

message UserDetailReq {
    uint32 id = 1;
}

message UserDetailRes {
    uint32 id = 1;
    string name = 2;
    repeated Group groups = 3;
}

message UserLoginReq {
    string name = 1;
    string password = 2;
}

message UserLoginRes {
    string code = 1;
    string msg = 2;
    optional string token = 3;
}

message UserMsLoginReq {
    string token = 1;
}

service UserService {
    rpc UserDetail(UserDetailReq) returns (UserDetailRes);
    rpc UserLogin(UserLoginReq) returns (UserLoginRes);
    rpc UserMsLogin(UserMsLoginReq) returns (UserLoginRes);
}